<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="delete">删除</string>
    <string name="edit">退出</string>
    <string name="share">分享</string>
    <string name="toast_camera_permission">访问相机的权限被拒绝。这个应用程序需要使用相机才能工作。</string>
    <string name="lbl_instructions">当提示初始化完成并检测到棋盘后，点击捕获棋盘</string>
    <string name="btn_start_recording">开始记录</string>
    <string name="btn_tests">测试</string>
    <string name="btn_undo_last_move">撤销上一步落子</string>
    <string name="btn_finish_record">完成</string>
    <string name="dialog_undo_last_move">你确定撤销上一步吗？</string>
    <string name="dialog_finish_recording">你想结束录制吗？</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_id">a716e470</string>

    <string name="toast_restore_original_corner_positions">恢复原有的棋盘位置</string>
    <string name="hint_with_no_item">您没有任何棋谱可以加载</string>
    <string name="hint_with_no_setting">您还没有添加任何对局设置</string>
    <string name="instructions_title">使用说明</string>
    <string name="instructions_paragraph1">一、单击对局设置按钮，添加并保存您常用的对局信息。单击您所添加的对局信息可以进行编辑，长按您所添加的对局信息可以进行删除。</string>
    <string name="instructions_paragraph2">二、添加对局设置后，单击开始对弈按钮，在所展示的已添加的对局设置中选择您所希望条目进行对弈。</string>
    <string name="instructions_paragraph3">三、单击开始后，调整您的手机。让它的摄像头可以完整地看到围棋棋盘的四个角。视角越高越好，当系统检测到棋盘后，会自动跳转到虚拟棋盘界面。</string>
    <string name="instructions_paragraph4">四、接下来正式开始对弈，该应用程序将开始检测落子动作。当检测到落子时，应用程序会在棋盘上显示检测到的落子位置。在整个过程中，尽可能地保持手机处于绝对静止状态，因为任何不必要的移动都可能造成检测的偏差。</string>
    <string name="instructions_paragraph5"></string>
    <string name="instructions_paragraph6"></string>
    <string name="instructions_paragraph7"></string>
    <string name="setting">设置</string>

    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>

    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="dwa_entries">
        <item>开启</item>
        <item>关闭</item>
    </string-array>
    <string-array name="iat_language_entries">
        <item>中文</item>
        <item>英语</item>
        <item>日语</item>
        <item>俄语</item>
        <item>西班牙语</item>
        <item>法语</item>
        <item>韩语</item>
    </string-array>
    <string-array name="iat_language_value">
        <item>zh_cn</item>
        <item>en_us</item>
        <item>ja_jp</item>
        <item>ru-ru</item>
        <item>es_es</item>
        <item>fr_fr</item>
        <item>ko_kr</item>
    </string-array>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
</resources>